Upgraded to Micronaut 4.0